
	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2005-05-19

	* Fix abort/retry logic with transactional interfaces
	  (Berkeley DB and SQLite) so that retries actually work.

0.94.12	2005-05-15 - Stable Release

	* RELEASE notes now has a brief summary of the changes since
          the last stable release (0.92.8) in October 2004.

	* Man pages added for the utility scripts bf_compact, bf_copy,
	  bf_resize, and bf_tar.

	* bf_tar now includes the DB_CONFIG file in the output if present.

	2005-05-13

	* French FAQ updated by Fabrice Prigent.

	2005-05-12

	* bogofilter-milter.pl update by Jonathan Kamens.  Use Spam/Ham 
	  rather than Yes/No, fixes to syslog calls, efficiency improvements.

0.94.11	2005-05-10

	* Correct variable name in bf_resize.

0.94.10	2005-05-08

	* Substitute path to the same awk program that configure found
	  into bf_compact so it works on systems that have only nawk or gawk
	  but not awk.

	* Substitute path to SUSv2 compliant shell in bf_* script "magic
	  shebang" lines, so they use /usr/xpg4/bin/sh on Solaris 7+
	  and don't fail any more.

	* Repaired t.abort and t.probe tests to work with ancient shells.

	2005-05-07

	* Fixed pathing problem in bogoutil.  Default directory should be "."

	* Revised utility scripts (bf_copy, bf_compact, bf_tar,
          bf_resize) for consistency and Solaris 9 compatibility.

0.94.9	2005-05-06

	* Fixed pathing regression which caused 'bogofilter_dir=dir' option
          to supercede '-d dir' option.

0.94.8	2005-05-03

	* Revised manpage's description of -p (passthrough) option.

	* When configured with --enable-transactions or --disable-transactions
	  - Fixed compilation problem